# routes/api.php
@@ -3,6 +3,7 @@
 
 use App\Http\Controllers\API\Authen_auth_api_Controller;
 use App\Http\Controllers\API\AuthenticateController;
+use App\Http\Controllers\API\EmailVerificationController;
 use App\Http\Controllers\API\VerificationController;
 use Illuminate\Support\Facades\Route;
 
@@ -15,15 +16,11 @@ Route::post('/verification-code', [AuthenticateController::class, 'verifyCode'])
 Route::post('/verification-code-password-reset',[AuthenticateController::class, 'verificationCode']);
 Route::post('/verify-login-code',[Authen_auth_api_Controller::class, 'verifyLoginCode']);
 Route::get('/get_all_users', [Authen_auth_api_Controller::class, 'getAllUsers']);
+Route::get('/email/verify/{id}/{hash}', [EmailVerificationController::class, 'verify'])->name('verification.verify');
 
-/*Route::middleware(['auth:sanctum',\App\Http\Middleware\CheckAccessTokenExpiry::class])->group(function () {
-    Route::post('/email/verification-notification', [VerificationController::class, 'sendVerificationEmail'])->middleware('throttle:3,1')->name('verification_send');
-    Route::get('/email/verify/{id}/{hash}', [VerificationController::class, 'verify'])->middleware(['signed'])->name('verification.verify');
 
-    Route::get('/email/generate-verification-url', [VerificationController::class, 'generateVerificationUrl']);
-});*/
-
-Route::middleware(['auth:sanctum',\App\Http\Middleware\CheckAccessTokenExpiry::class])->group(function () {
+Route::middleware(['auth:sanctum','verified',\App\Http\Middleware\CheckAccessTokenExpiry::class])->group(function () {
+    Route::post('/email/resend', [EmailVerificationController::class, 'resend'])->name('verification.resend');
     Route::post('/change-password',[AuthenticateController::class, 'changePassword']);
     Route::post('/logout', [Authen_auth_api_Controller::class, 'logout']);
     Route::get('/user', [Authen_auth_api_Controller::class, 'user']);
